# just-terminal

./: .eslintrc.json  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
docs/: ARCHITECTURE.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs
src-tauri/src/explorer/: commands.rs  fs_ops.rs  mod.rs  watcher.rs
src-tauri/src/git/: actions.rs  commands.rs  mod.rs  repository.rs
src-tauri/src/session/: commands.rs  mod.rs  persistence.rs
src-tauri/src/terminal/: commands.rs  mod.rs  pty_manager.rs  session.rs
src/components/explorer/: Breadcrumb.tsx  ContextMenu.tsx  FileTree.tsx  FileTreeNode.tsx  FileTreeToolbar.tsx
src/components/git/: GitActionsPanel.tsx  GitGraph.tsx  GitGraphPanel.tsx  GitStatusBar.tsx
src/components/layout/: MainLayout.tsx  SplitPane.tsx
src/components/settings/: SettingsPanel.tsx
src/components/sidebar/: Favorites.tsx  RecentDirs.tsx  Sidebar.tsx
src/hooks/: useActiveTerminalSync.ts  useDragDrop.ts  useFileWatcher.ts  useGitStatus.ts  useKeyBindings.ts  useTerminal.ts
src/lib/: drag-manager.ts  drag-state.ts  error-handler.ts  osc-parser.ts  shell-profiles.ts  tauri-bridge.ts  xterm-setup.ts
src/store/: explorer-ui.store.ts  explorer.store.ts  git.store.ts  notification.store.ts  session.store.ts  settings.store.ts  terminals.store.ts
src/styles/: globals.css
src/types/: explorer.types.ts  git.types.ts  session.types.ts  terminal.types.ts
(+9 files in other folders)
